Afegit filtre per amics i enemics